--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>resources/show.png</file>
+        <file>resources/checkbox-unchecked.png</file>
+        <file>resources/checkbox-checked.png</file>
     </qresource>
 </RCC>
